# ChainLogistics

./: .gitignore  .pre-commit-config.yaml  CODE_REVIEW.md  Contributing.md  DEPLOYMENT.md  Readme.md  docker-compose.yml  package-lock.json  package.json  pr.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  lint.yml  release.yml  security.yml
backend/: .env.example  API_DOCUMENTATION.md  Cargo.toml  Dockerfile  ERROR_HANDLING_README.md
backend/config/: default.toml  development.toml  production.toml
backend/migrations/: 20240102000000_add_financial_tables.sql  20240103000000_add_carbon_tables.sql  20240104000000_add_scalability_indexes.sql  20240105000000_add_user_roles.sql  20240106000000_add_collaboration.sql  20240106000000_add_regulatory_compliance.sql  20240107000000_add_iot_sensors.sql  20240108000000_add_quality_control.sql  20240109000000_add_supplier_system.sql  20260428000000_add_recall_management.sql  20260428000000_enhance_audit_logs.sql  20260429000000_add_batch_lot_tracking.sql
backend/src/: config.rs  database.rs  docs.rs  error.rs  handlers.rs  main.rs  middleware.rs  models.rs  monitoring.rs  routes.rs  services.rs  utils.rs  validation.rs
backend/src/blockchain/: config.rs  mod.rs  provider.rs  types.rs
backend/src/compliance/: audit.rs  mod.rs  rules.rs  validator.rs
backend/src/handlers/: api_keys.rs  auth.rs  batch.rs  carbon.rs  collaboration.rs  compliance.rs  digital_twin.rs  event.rs  financial.rs  health.rs  iot.rs  monitoring.rs  product.rs  quality.rs  recall.rs  regulatory.rs  stats.rs  supplier.rs
backend/src/middleware/: audit.rs  auth.rs  error_handler.rs  rate_limit.rs  security.rs
backend/src/models/: analytics.rs  batch.rs  carbon.rs  collaboration.rs  iot.rs  quality.rs  regulatory.rs  supplier.rs
backend/src/utils/: crypto.rs  (+1 more)
backend/tests/: api_integration_tests.rs
docker/: README.md  autoscaling.yml
docker/nginx/: nginx.conf
docker/postgres/: primary.conf  replica.conf
docker/prometheus/: prometheus.yml
docker/promtail/: promtail-config.yml
docs/: ACCESSIBILITY.md  API.md  ARCHITECTURE.md  BACKUP_STRATEGY.md  CONFIG_AND_LOGGING_OPERATIONS.md  DISASTER_RECOVERY.md  ERROR_HANDLING_IMPLEMENTATION.md  ERROR_HANDLING_STANDARDS.md  LINTING_GUIDE.md  LOGGING_STANDARDS.md  SECURITY_IMPLEMENTATION.md  TESTING_STRATEGY.md  USER_GUIDES.md  gas_usage_benchmarks.md
docs/ADR/: ADR-001-stellar-soroban-selection.md  ADR-002-rust-backend-selection.md  ADR-003-postgresql-selection.md  README.md
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/app/: layout.tsx
frontend/components/: ErrorBoundary.tsx  LanguageSelector.tsx  SkipToContentLink.tsx
frontend/lib/: errors.ts  secure-storage.ts
frontend/locales/: ar.json  en.json  es.json  fr.json
frontend/playwright-report/: index.html
sdk/: API_REFERENCE.md  EXAMPLES.md  INSTALLATION.md  MIGRATION_GUIDE.md  README.md
sdk/python/: README.md  pyproject.toml
sdk/python/src/chainlogistics_sdk/: __init__.py  client.py  config.py  exceptions.py  models.py
sdk/python/src/chainlogistics_sdk/services/: __init__.py  events.py  products.py  stats.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: client.rs  config.rs  error.rs  events.rs  lib.rs  models.rs  products.rs  stats.rs
smart-contract/: Cargo.toml  GAS_OPTIMIZATION_REPORT.md  INTEGRATION_TESTING.md  README.md
smart-contract/contracts/: README.md
(+201 files in other folders)
