[package]
name = "chainlogistics-sdk"
version = "1.0.0"
edition = "2021"
authors = ["ChainLogistics Team <support@chainlogistics.io>"]
description = "Rust SDK for ChainLogistics API"
license = "MIT"
repository = "https://github.com/chainlogistics/chainlogistics-sdk-rust"
documentation = "https://docs.rs/chainlogistics-sdk"
keywords = ["blockchain", "supply-chain", "logistics", "api"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
url = "2.0"
tokio = { version = "1.0", features = ["rt-multi-thread"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"

[features]
default = ["client"]
client = ["tokio"]
